syntax = 'proto3';

option java_multiple_files = true;
package com.nutrymaco.alg;

service AlgorithmService {
  rpc GetResult(AlgorithmRequest) returns (AlgorithmResponse);
}

message AlgorithmRequest {
  string string1 = 1;
  string string2 = 2;
}

message AlgorithmResponse {
  int32 result = 1;
}